--- a/styles.css
+++ b/styles.css
@@ -196,3 +196,42 @@ h1 {
   background-image: url(./image/cover.jpg);
   border-radius: 4px;
 }
+
+.card-front {
+  width: 95px;
+  height: 133px;
+  border-radius: 4px;
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+}
+
+.card-value-top {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  top: 0;
+  left: 5%;
+  align-items: center;
+  justify-content: center;
+}
+.card-value-top svg {
+  margin-top: -2px;
+}
+
+.card-value-bottom {
+  display: flex;
+  flex-direction: column;
+  transform: rotate(180deg);
+  position: absolute;
+  bottom: 0;
+  right: 5%;
+  align-items: center;
+  justify-content: center;
+}
+.card-value-bottom svg {
+  margin-top: -2px;
+}
