--- a/styles.css
+++ b/styles.css
@@ -154,6 +154,7 @@ h1 {
 .game {
   max-width: 1024px;
   margin: auto;
+  display: none;
 }
 .game-flex {
   display: flex;
@@ -188,6 +189,10 @@ h1 {
   display: grid;
   grid-template-columns: repeat(9, 1fr);
   gap: 15px;
+  position: absolute;
+  /* top: 0;
+  left: 0;
+  transform: translate(-50%, -50%); */
 }
 
 .card-back {
@@ -195,6 +200,8 @@ h1 {
   height: 133px;
   background-image: url(./image/cover.jpg);
   border-radius: 4px;
+  transition: 1s;
+  /* backface-visibility: hidden; */
 }
 
 .card-front {
@@ -207,8 +214,18 @@ h1 {
   position: relative;
   justify-content: center;
   align-items: center;
+  z-index: -1;
+  /* backface-visibility: hidden;
+  /* transform: rotateY(180deg); */
+  /* transition: 1s; */ */
 }
-
+  /* .card-back:hover {
+    transform: rotateY(180deg);
+    visibility: hidden;
+  }
+  .card-front:hover {
+    transform: rotateY(360deg);
+  } */
 .card-value-top {
   position: absolute;
   display: flex;
