--- a/styles.css
+++ b/styles.css
@@ -186,29 +186,35 @@ h1 {
     left: 25%;
 }
 
-.grid {
+.game-container {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     gap: 15px;
-    position: absolute;
-}
-.cont {
-    width: 100%;
-    display: flex;
-    justify-content: center;
 }
 
+.card-container {
+    position: relative;
+    width: 95px;
+    height: 133px;
+}
 .card-back {
     width: 95px;
     height: 133px;
-    background-image: url(./image/cover.jpg);
     border-radius: 4px;
-    transition: 1s;
+    position: absolute;
+    transition: transform 0.7s ease-out;
+    backface-visibility: hidden;
+}
+.card-back img {
+    border-radius: 4px;
 }
 
 .card-front {
     width: 95px;
     height: 133px;
+    border-radius: 4px;
+    transition: transform 0.7s ease-out;
+    backface-visibility: hidden;
     border-radius: 4px;
     background-color: #fff;
     display: flex;
@@ -216,7 +222,13 @@ h1 {
     position: relative;
     justify-content: center;
     align-items: center;
-    z-index: -1;
+    transform: rotateY(180deg);
+}
+.card-container.flipped .card-back {
+    transform: rotateY(180deg);
+}
+.card-container.flipped .card-front {
+    transform: rotateY(0deg);
 }
 
 .card-value-top {
